--- a/pymakr.conf
+++ b/pymakr.conf
@@ -4,7 +4,11 @@
     ".gitignore",
     ".git",
     "env",
-    "venv"
+    "venv",
+    "README.md",
+    "LICENSE",
+    "config/solis.env.default",
+    "pymakr.conf"
   ],
   "name": "solar-display-micropython"
 }
