Update the docco

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -4,7 +4,9 @@
     ".gitignore",
     ".git",
     "env",
-    "venv"
+    "venv",
+    "docs",
+    "*.md"
   ],
   "name": "solar-display-micropython"
 }
